issue-221 icon alignment changes (#246)

--- a/blocks/icon-list/icon-list.css
+++ b/blocks/icon-list/icon-list.css
@@ -74,6 +74,7 @@ div.section.fragment-container.icon-list-container > div.fragment-wrapper {
         width: 33%;
         display: flex;
         flex-direction: row;
+        flex: 0 0 50%;
     }
 
     div.icon-list.plain > div {
